cpp/scrabble-score/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.008s
user	0m0.001s
sys	0m0.006s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
[ 25%] Building CXX object CMakeFiles/scrabble-score.dir/scrabble_score_test.cpp.o
[ 50%] Building CXX object CMakeFiles/scrabble-score.dir/scrabble_score.cpp.o
[ 75%] Building CXX object CMakeFiles/scrabble-score.dir/test/tests-main.cpp.o
[100%] Linking CXX executable scrabble-score
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
[100%] Built target scrabble-score
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
===============================================================================
All tests passed (6 assertions in 6 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
[100%] Built target test_scrabble-score
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/scrabble-score.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/scrabble-score.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)32669"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
scrabble_score.cpp                            36      32    88%   14,28,31-32
scrabble_score_test.cpp                       16      16   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         84      75    89%
------------------------------------------------------------------------------
lines: 89.3% (75 out of 84)
branches: 43.8% (60 out of 137)

real	0m11.962s
user	0m11.151s
sys	0m0.808s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.162s
user	0m0.114s
sys	0m0.051s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.160s
user	0m0.114s
sys	0m0.047s

===============================================================================

Running: clang-format-16 -style=file -i ./scrabble_score.cpp ./scrabble_score_test.cpp ./scrabble_score.h

real	0m0.023s
user	0m0.010s
sys	0m0.013s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./scrabble_score.cpp ./scrabble_score_test.cpp ./scrabble_score.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/scrabble_score.h:4:10: fatal error: 'cctype' file not found
#include <cctype>
         ^~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/scrabble_score.h.

real	0m3.059s
user	0m2.946s
sys	0m0.113s


real	0m3.061s
user	0m2.947s
sys	0m0.113s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
36224 warnings generated.
80427 warnings generated.
80427 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/scrabble_score.h.
Suppressed 80434 warnings (80427 in non-user code, 7 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m16.249s
user	0m16.106s
sys	0m0.141s
Running: clang-tidy-16 ./scrabble_score.cpp ./scrabble_score_test.cpp ./scrabble_score.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/scrabble-score/scrabble_score.h:4:10: error: 'cctype' file not found [clang-diagnostic-error]
#include <cctype>
         ^~~~~~~~


real	0m16.251s
user	0m16.106s
sys	0m0.145s

===============================================================================

